--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint src",
+    "test": "mocha",
+    "ncc": "npx @vercel/ncc build src/index.mjs -o dist",
+    "clean": "rm -rf node_modules dist"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +20,21 @@
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.8.0",
-    "eslint": "^9.8.0",
-    "globals": "^15.8.0"
+    "@vercel/ncc": "^0.38.1",
+    "eslint-plugin-mocha": "^10.5.0",
+    "mocha": "^10.7.0"
+  },
+  "eslintConfig": {
+    "extends": "eslint-config-standard",
+    "parserOptions": {
+      "ecmaVersion": 2020
+    },
+    "env": {
+      "node": true
+    },
+    "rules": {
+      "no-console": 0,
+      "no-unused-vars": 1
+    }
   }
 }
