--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint src",
     "test": "mocha",
-    "ncc": "NODE_OPTIONS='--experimental-vm-modules' npx @vercel/ncc build src/index.mjs -o dist --target es2020 -m && sed -i 's/=require/=__WEBPACK_EXTERNAL_createRequire(import.meta.url)/' dist/index.mjs",
+    "ncc": "NODE_OPTIONS='--experimental-vm-modules' npx @vercel/ncc build src/index.mjs -o dist --target es2020 && sed -i 's/require(/__WEBPACK_EXTERNAL_createRequire(import.meta.url)(/' dist/index.mjs",
     "clean": "rm -rf node_modules dist"
   },
   "keywords": [],
